# sentiment_analysis

./: .gitattributes  .gitignore  .secrets.baseline  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml
app/: app (1).py  app.py
data/: b2w_clean.csv  b2w_test.csv  b2w_train.csv
models/: model.pkl  vectorizer.pkl
scripts/: pre-commit
src/: train.ipynb  train.py  update_space (1).py  update_space .py  update_space.py  upload_to_hub.py
tests/: test_model.py
